--- a/Level-1-Task-2 Calculator/index.html
+++ b/Level-1-Task-2 Calculator/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h2 class="heading">Simple Claculator</h2>
+      <h2 class="heading">Calculator</h2>
       <div class="calculator">
         <form action="">
           <div class="display">
